# rust-experiments

./: .gitignore  README.md
basics/: Cargo.toml
basics/location/: Cargo.toml
basics/location/src/: lib.rs  vec_ops.rs
basics/src/: main.rs
cross/: Cargo.toml  README.md  Scratch.txt  lib.rs  main.html  main.rs  state.rs
cross/shaders/: flat.wgsl
cross/src/: cross.rs  main.rs
cross/src/cross/: analysis.rs  config.rs  input.rs  renderer.rs
fractal/: Cargo.toml
fractal/src/: main.rs
voxelli/: Cargo.toml
voxelli/src/: fps.rs  main.rs
voxelli/src/objects/: loader.rs  mod.rs  object.rs  palette.rs
