[package]
name = "cross"
version = "0.1.0"
edition = "2021"


[dependencies]
cfg-if = "1"

# Shared dependencies
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.3"

# web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.15.1", features = ["webgl"]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"] # For web and desktop support
name = "cross"
path = "lib.rs"

[[bin]]
name = "cross-bin"
path = "main.rs"
