[package]
name = "cross"
version = "0.1.0"
edition = "2021"

[dependencies]
clustering = "0.1.0"
eframe = "0.21.3"
egui-wgpu = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24.6", features = ["jpeg"] }
rfd = "0.11.3"
tracing-subscriber = "0.3.16"

[[bin]]
name = "cross"
path = "src/main.rs"
